--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "generate-keys"
+path = "src/keys.rs"
+
 [dependencies]
+axum = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
 tokio = { version = "1.0", features = ["full"] }
-axum = "0.6"
+jwt-simple = "0.11.6"
